# exegesis

./: .gitignore  README.md  pyproject.toml
data/input/: steiner.md
data/output/: steiner.jsonl
data/preprocessing/: steiner_par.txt  steiner_sent.txt
src/exegesis/: check_ft.ipynb  preprocess_par.ipynb  preprocess_sent.ipynb
