[tool.poetry]
name = "exegesis"
version = "0.1.0"
description = ""
authors = ["Gustavo Araujo Costa <gustavo@arcos.org.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nltk = "^3.9.1"
numpy = "^2.1.0"
tiktoken = "^0.7.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
